# dsgekit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: core-linear-ci.yml  publish-pypi.yml
docs/: baseline_compatibility.md  brand_naming_policy.md  derivatives.md  discretion_lq.md  first_order_perturbation.md  forecast_decomposition.md  formats.md  index.md  legal_and_attribution.md  marginal_data_density.md  mcmc.md  mod_workflow_migration.md  occbin_lite.md  osr.md  perfect_foresight.md  performance.md  priors.md  quickstart.md  ramsey_lq.md  release_legal_gate.md  second_order_perturbation.md  third_order_perturbation.md  welfare.md
docs/adr/: 0001-ir-design.md
examples/: README.md  ar1_pipeline.py  benchmark_block_sparse_newton.py  benchmark_newton_jit.py  nk_forward_looking.py  nonlinear_girf.py  reference_model_zoo.py
src/dsgekit/: __init__.py  exceptions.py
src/dsgekit/derivatives/: __init__.py  stack.py
src/dsgekit/diagnostics/: __init__.py  baseline_compat.py
src/dsgekit/filters/: __init__.py  forecast.py  kalman.py  smoother.py
src/dsgekit/report/: __init__.py  plots.py  tables.py
src/dsgekit/simulate/: irf.py  moments.py  second_order.py  simulate.py  welfare.py
src/dsgekit/solvers/: diagnostics.py
src/dsgekit/solvers/linear/: __init__.py  gensys.py
src/dsgekit/solvers/nonlinear/: first_order.py  second_order.py
src/dsgekit/transforms/: __init__.py  linearize.py  statespace.py
tests/: test_ar1_pipeline.py  test_baseline_compat.py  test_cli_baseline_regression.py  test_derivatives_stack.py  test_diagnostics.py  test_forecast_decomposition.py  test_kalman.py  test_model_zoo.py  test_nk_model.py  test_nonlinear_first_order.py  test_second_order_pruning.py  test_smoother.py  test_welfare.py
tests/fixtures/baselines/: ar1_linear_baseline.json
tools/: generate_third_party_notices.py
